# multi_robot

./: README.md
multi_robot/: CMakeLists.txt  package.xml
multi_robot_bringup/: CMakeLists.txt  package.xml
multi_robot_bringup/config/: house_1.yaml  house_2.yaml  house_3.yaml  house_4.yaml  house_5.yaml  house_follower_car_1.yaml  house_follower_car_2.yaml  warehouse_1.yaml  warehouse_2.yaml  warehouse_3.yaml
multi_robot_bringup/launch/: multi_robot_simulation.launch.py
multi_robot_bringup/launch/utils/: robots_states_publishers_urdf.launch.py  robots_states_publishers_xacro.launch.py  spawn_robots_sdf.launch.py  spawn_robots_topic.launch.py
multi_robot_gazebo/: CMakeLists.txt  package.xml
multi_robot_gazebo/config/: house_3.yaml  robots_empty_world.yaml  robots_house.yaml  robots_house_pro.yaml  robots_warehouse.yaml  robots_world.yaml
multi_robot_gazebo/launch/: multi_robot_empty_world.launch.py  multi_robot_house.launch.py  multi_robot_house_pro.launch.py  multi_robot_simulation.launch.py  multi_robot_warehouse.launch.py  multi_robot_world.launch.py  robots_states_publishers.launch.py  spawn_robots.launch.py  spawn_robots_topic.launch.py
multi_robot_gazebo/launch/utils/: robots_states_publishers.launch.py
multi_robot_gazebo/models/aws_wall/: model.config  model.sdf
multi_robot_gazebo/models/aws_wall_2/: model.config  model.sdf
multi_robot_gazebo/models/aws_wall_3/: model.config  model.sdf
multi_robot_gazebo/models/aws_wall_4/: model.config  model.sdf
multi_robot_gazebo/models/house/: model.config  model.sdf
multi_robot_gazebo/models/world/: model.config  model.sdf
multi_robot_gazebo/worlds/: warehouse.world  world.world
multi_robot_master_slave/: CMakeLists.txt  package.xml
multi_robot_master_slave/configs/: nav_robots_house.yaml  nav_robots_house_1.yaml  nav_robots_house_2.yaml  nav_robots_house_3.yaml  nav_robots_house_pro.yaml
multi_robot_master_slave/scripts/: nav_master_slave.py
multi_robot_master_slave/scripts/robot/: navigate_master.py  navigate_slave.py  robot.py
multi_robot_master_slave/scripts/utils/: ChainOfResponsibility.py  DataRobots.py  PoseUtils.py  data_robots.py  delegate_task.py  navigation_client.py
multi_robot_move/: CMakeLists.txt  package.xml
multi_robot_move/configs/: nav_robots_empty_world.yaml  nav_robots_house.yaml  nav_robots_house_pro.yaml  nav_robots_world.yaml
multi_robot_move/scripts/: nav_follow_waypoints.py  nav_master_slave.py  nav_pose.py  nav_pose_v2.py  nav_through_poses.py  nav_through_poses_v2.py
multi_robot_move/scripts/utils/: DataRobots.py  NavigationClient.py  PoseUtils.py
multi_robot_navigation/: CMakeLists.txt  package.xml
multi_robot_navigation/launch/: bringup_nav.launch.py  localization.launch.py  multi_navigation.launch.py  navigation.launch.py  rviz.launch.py  slam.launch.py
multi_robot_navigation/maps/: map_empty.yaml  map_house.pgm  map_ramel.pgm  map_ramel.yaml
