<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robot</name>
  <version>0.0.0</version>
  <description>Metapackage</description>
  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <maintainer email="cepaquin@espol.edu.ec">Cesar Quintuna</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>multi_robot_gazebo</exec_depend>
  <exec_depend>multi_robot_move</exec_depend>
  <exec_depend>multi_robot_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>